-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.2.0
-
DragonFly BSD 3.6.0 x86_64
FreeBSD should be affected as well.
I wrote a patch to fix errors when compile module-qtdeclarative in DragonFly BSD. (FreeBSD should be affected as well because DragonFly's dports is mainly based on FreeBSD's ports).
The errors are caused by using non-portable function pthread_getattr_np() which seems only available in Linux but not in BSD (at least not FreeBSD and DragonFly).
Another thing is that alloca.h is declared in stdlib.h, so there's no need to include it under FreeBSD and DragonFly.
For Gerrit Dashboard: QTBUG-35867 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
76130,1 | Make compile on DragonFly BSD. | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |