src/qml/jsruntime/qv4mm.cpp
@@ -67,6 +67,10 @@
 #include <sys/storage.h>   // __tls()
 #endif
 
+#if USE(PTHREADS) && HAVE(PTHREAD_NP_H)
+#include <pthread_np.h>
+#endif
+
 QT_BEGIN_NAMESPACE
 
 using namespace QV4;
@@ -234,7 +238,11 @@ MemoryManager::MemoryManager()
 #  else
     void* stackBottom = 0;
     pthread_attr_t attr;
+#if HAVE(PTHREAD_NP_H) && OS(FREEBSD)
+    if (pthread_attr_get_np(pthread_self(), &attr) == 0) {
+#else
     if (pthread_getattr_np(pthread_self(), &attr) == 0) {
+#endif
         size_t stackSize = 0;
         pthread_attr_getstack(&attr, &stackBottom, &stackSize);
         pthread_attr_destroy(&attr);
